--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-04-hooks-images",
+  "name": "goit-react-hw-04-movies",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AnnaChebrova.github.io/goit-react-hw-04-hooks-images",
+  "homepage": "https://AnnaChebrova.github.io/goit-react-hw-04-movies",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.2"
